// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button States Has a disabled state 1`] = `
.emotion-24 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-24 *,
.emotion-24 *::after,
.emotion-24 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-2 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  color: #ffffff;
  background-color: #b3d3e9;
  box-shadow: inset 0 0 0 0.125rem #b3d3e9;
  width: auto;
}

.emotion-2::-moz-focus-inner {
  border: none;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  color: #ffffff;
}

.emotion-2:hover,
.emotion-2:active {
  background-color: #b3d3e9;
  box-shadow: inset 0 0 0 0.125rem #b3d3e9;
}

.emotion-6 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  background-color: #ffffff;
  color: #b3d3e9;
  box-shadow: inset 0 0 0 0.125rem #b3d3e9;
  width: auto;
}

.emotion-6::-moz-focus-inner {
  border: none;
}

.emotion-10 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  background-color: #e22525;
  color: #ffffff;
  box-shadow: inset 0 0 0 0.125rem #e22525;
  background-color: #ecb6b6;
  box-shadow: inset 0 0 0 0.125rem #ecb6b6;
  width: auto;
}

.emotion-10::-moz-focus-inner {
  border: none;
}

.emotion-10:hover,
.emotion-10:focus,
.emotion-10:active {
  color: #ffffff;
}

.emotion-14 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  background: none;
  color: #ecb6b6;
  width: auto;
}

.emotion-14::-moz-focus-inner {
  border: none;
}

.emotion-18 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  background: none;
  color: #b3d3e9;
  width: auto;
}

.emotion-18::-moz-focus-inner {
  border: none;
}

.emotion-22 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: not-allowed;
  width: auto;
}

.emotion-22::-moz-focus-inner {
  border: none;
}

<div
  className="emotion-24"
>
  <button
    aria-busy="false"
    className="emotion-2 emotion-3"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-6 emotion-3"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-10 emotion-3"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-14 emotion-3"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-18 emotion-3"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
  </button>
  <button
    aria-busy="false"
    className="emotion-22 emotion-3"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`Button States Has a loading state 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(359deg);
    -ms-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.emotion-48 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-48 *,
.emotion-48 *::after,
.emotion-48 *::before {
  box-sizing: border-box;
}

.emotion-6 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  color: #ffffff;
  width: auto;
}

.emotion-6::-moz-focus-inner {
  border: none;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:active {
  color: #ffffff;
}

.emotion-6,
.emotion-6:hover,
.emotion-6:active,
.emotion-6:focus {
  background-color: #032c5e;
  box-shadow: inset 0 0 0 0.125rem #032c5e;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 0;
}

.emotion-4 {
  box-sizing: border-box;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 14px;
}

.emotion-3 {
  width: 1.25rem;
  height: 1.25rem;
  display: inline-block;
  opacity: 1;
  -webkit-transition: opacity 250ms cubic-bezier(0.215,0.61,0.355,1);
  transition: opacity 250ms cubic-bezier(0.215,0.61,0.355,1);
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

@media screen and (prefers-reduced-motion:reduce) {
  .emotion-3 {
    -webkit-animation: none;
    animation: none;
  }
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.25rem;
  height: 1.25rem;
  color: currentColor;
}

.emotion-14 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  background-color: #ffffff;
  color: #032c5e;
  background-color: #dceaf4;
  box-shadow: inset 0 0 0 0.125rem #dceaf4;
  width: auto;
}

.emotion-14::-moz-focus-inner {
  border: none;
}

.emotion-22 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  background-color: #e22525;
  color: #ffffff;
  box-shadow: inset 0 0 0 0.125rem #e22525;
  background-color: #600101;
  box-shadow: inset 0 0 0 0.125rem #600101;
  width: auto;
}

.emotion-22::-moz-focus-inner {
  border: none;
}

.emotion-22:hover,
.emotion-22:focus,
.emotion-22:active {
  color: #ffffff;
}

.emotion-30 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  background: none;
  color: #921200;
  width: auto;
}

.emotion-30::-moz-focus-inner {
  border: none;
}

.emotion-38 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  background: none;
  color: #032c5e;
  width: auto;
}

.emotion-38::-moz-focus-inner {
  border: none;
}

.emotion-46 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  cursor: wait;
  width: auto;
}

.emotion-46::-moz-focus-inner {
  border: none;
}

<div
  className="emotion-48"
>
  <button
    aria-busy="true"
    className="emotion-6 emotion-7"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
    <span
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-3"
        size="sizeIcon20"
      >
        <span
          className="emotion-2"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="1"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="1"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-14 emotion-7"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
    <span
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-3"
        size="sizeIcon20"
      >
        <span
          className="emotion-2"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="2"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="2"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-22 emotion-7"
    disabled={true}
    size="default"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
    <span
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-3"
        size="sizeIcon20"
      >
        <span
          className="emotion-2"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="3"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="3"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-30 emotion-7"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
    <span
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-3"
        size="sizeIcon20"
      >
        <span
          className="emotion-2"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="4"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="4"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-38 emotion-7"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
    <span
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-3"
        size="sizeIcon20"
      >
        <span
          className="emotion-2"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="5"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="5"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
  <button
    aria-busy="true"
    className="emotion-46 emotion-7"
    disabled={true}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
    <span
      className="emotion-4 emotion-5"
    >
      <div
        className="emotion-3"
        size="sizeIcon20"
      >
        <span
          className="emotion-2"
          size="sizeIcon20"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="6"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="6"
            >
              Loading, please wait.
            </title>
            <path
              d="M19.868 13.591l.089.016a.5.5 0 01.354.611 8.603 8.603 0 01-15.964 1.71l-.277 3.245-.015.09a.5.5 0 01-.981-.175l.407-4.772.018-.096a.5.5 0 01.66-.328l4.47 1.727.082.04a.5.5 0 01.205.607l-.04.08a.5.5 0 01-.607.206l-3.09-1.194a7.604 7.604 0 0014.166-1.397.5.5 0 01.523-.37zm-7.86-10.2a8.604 8.604 0 017.653 4.67l.277-3.243.015-.089a.5.5 0 01.981.174l-.407 4.773-.017.095a.5.5 0 01-.661.329l-4.47-1.728-.082-.04a.5.5 0 01-.205-.606l.04-.081a.5.5 0 01.607-.206l3.09 1.195A7.604 7.604 0 004.663 10.03a.5.5 0 01-.522.37l-.09-.015a.5.5 0 01-.354-.612 8.603 8.603 0 018.311-6.382z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a destructive variant 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-2 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: #e22525;
  color: #ffffff;
  box-shadow: inset 0 0 0 0.125rem #e22525;
  width: auto;
}

.emotion-2::-moz-focus-inner {
  border: none;
}

.emotion-2:focus,
.emotion-2:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  color: #ffffff;
}

.emotion-2:hover {
  background-color: #600101;
  box-shadow: inset 0 0 0 0.125rem #600101;
}

.emotion-2:focus {
  background-color: #e22525;
  box-shadow: inset 0 0 0 0.125rem #600101,0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:active {
  background-color: #921200;
  box-shadow: inset 0 0 0 0.125rem #600101,0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-4"
>
  <button
    aria-busy="false"
    className="emotion-2 emotion-3"
    disabled={false}
    onClick={[Function]}
    size="default"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Delete
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a destructive_link variant 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-2 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: none;
  color: #e22525;
  width: auto;
}

.emotion-2::-moz-focus-inner {
  border: none;
}

.emotion-2:focus,
.emotion-2:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:hover {
  color: #b20600;
}

.emotion-2:active {
  color: #921200;
}

<div
  className="emotion-4"
>
  <button
    aria-busy="false"
    className="emotion-2 emotion-3"
    disabled={false}
    onClick={[Function]}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Undo
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a link variant 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-2 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: none;
  color: #005ea6;
  width: auto;
}

.emotion-2::-moz-focus-inner {
  border: none;
}

.emotion-2:focus,
.emotion-2:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:hover {
  color: #003e82;
}

.emotion-2:active {
  color: #032c5e;
}

<div
  className="emotion-4"
>
  <button
    aria-busy="false"
    className="emotion-2 emotion-3"
    disabled={false}
    onClick={[Function]}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Go to Paste
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a primary variant 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-2 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #ffffff;
  background-color: #027ac5;
  box-shadow: inset 0 0 0 0.125rem #027ac5;
  width: auto;
}

.emotion-2::-moz-focus-inner {
  border: none;
}

.emotion-2:focus,
.emotion-2:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  color: #ffffff;
}

.emotion-2:hover {
  background-color: #032c5e;
  box-shadow: inset 0 0 0 0.125rem #032c5e;
}

.emotion-2:focus {
  background-color: #027ac5;
  box-shadow: inset 0 0 0 0.125rem #032c5e,0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:active {
  background-color: #003e82;
  box-shadow: inset 0 0 0 0.125rem #032c5e,0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

<div
  className="emotion-4"
>
  <button
    aria-busy="false"
    className="emotion-2 emotion-3"
    disabled={false}
    onClick={[Function]}
    size="default"
    type="submit"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a reset variant 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-2 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  width: auto;
}

.emotion-2::-moz-focus-inner {
  border: none;
}

.emotion-2:focus,
.emotion-2:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-4"
>
  <button
    aria-busy="false"
    className="emotion-2 emotion-3"
    disabled={false}
    onClick={[Function]}
    size="reset"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Hello World!
    </span>
  </button>
</div>
`;

exports[`Button Variants Has a secondary variant 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-2 {
  position: relative;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: #ffffff;
  color: #005ea6;
  background-color: #ffffff;
  box-shadow: inset 0 0 0 0.125rem #027ac5;
  width: auto;
}

.emotion-2::-moz-focus-inner {
  border: none;
}

.emotion-2:focus,
.emotion-2:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2:hover {
  color: #032c5e;
  background-color: #f5f8ff;
  box-shadow: inset 0 0 0 0.125rem #032c5e;
}

.emotion-2:focus {
  color: #032c5e;
  background-color: #f5f8ff;
  box-shadow: inset 0 0 0 0.125rem #032c5e,0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-2:active {
  color: #032c5e;
  background-color: #dceaf4;
  box-shadow: inset 0 0 0 0.125rem #032c5e,0 0 0 4px rgba(2,122,197,0.8);
}

<div
  className="emotion-4"
>
  <button
    aria-busy="false"
    className="emotion-2 emotion-3"
    disabled={false}
    onClick={[Function]}
    size="default"
    type="button"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Submit
    </span>
  </button>
</div>
`;
